{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 177,
  "lineage": "b789916c-e358-8cd6-a41e-faf3da69209f",
  "resources": [
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:security-group/sg-0999539433329023f",
            "description": "MySQL security group",
            "egress": [],
            "id": "sg-0999539433329023f",
            "ingress": [],
            "name": "nichiporenko-db-sg-20220322224134478100000001",
            "name_prefix": "nichiporenko-db-sg-",
            "owner_id": "061770395289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nichiporenko-db-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-db-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-3876904914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0999539433329023f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_security_group.aws_security_group.this",
            "module.db_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:061770395289:instance/i-0b781473debceb6f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b781473debceb6f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nichiporenko",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03808c76673420740",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_ip": "10.0.1.191",
            "public_ip": "107.22.137.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:061770395289:key/48d33df3-f362-466d-bac1-e4c7760946ef",
                "throughput": 0,
                "volume_id": "vol-0fcb07626566ea129",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066d18e6e1c4b430f",
            "tags": {
              "Name": "nichiporenko-ec2",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-ec2",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "nichiporenko-ec2"
            },
            "vpc_security_group_ids": [
              "sg-0ddd3ab3059725ada"
            ]
          },
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:security-group/sg-0ddd3ab3059725ada",
            "description": "EC2 security group",
            "egress": [],
            "id": "sg-0ddd3ab3059725ada",
            "ingress": [],
            "name": "nichiporenko-ec2-sg-20220322224135107800000002",
            "name_prefix": "nichiporenko-ec2-sg-",
            "owner_id": "061770395289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nichiporenko-ec2-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-ec2-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2385475650",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ddd3ab3059725ada",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3336947035",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ddd3ab3059725ada",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:internet-gateway/igw-06d5bc34bb99c8b89",
            "id": "igw-06d5bc34bb99c8b89",
            "owner_id": "061770395289",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d5bc34bb99c8b89",
            "id": "r-rtb-017f3e3c7e1f9c9f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017f3e3c7e1f9c9f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-0b26b4b5153dd3e17",
            "id": "rtb-0b26b4b5153dd3e17",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-03db9074768a1245a",
            "id": "rtb-03db9074768a1245a",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-0a6e56fd6fc21a55a",
            "id": "rtb-0a6e56fd6fc21a55a",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-017f3e3c7e1f9c9f9",
            "id": "rtb-017f3e3c7e1f9c9f9",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96c52eb60657a25",
            "route_table_id": "rtb-0b26b4b5153dd3e17",
            "subnet_id": "subnet-0a9b574402a166c09"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0580d2c70cc1bed6c",
            "route_table_id": "rtb-03db9074768a1245a",
            "subnet_id": "subnet-01f564ee700ce3af0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040cdb158015223d5",
            "route_table_id": "rtb-0a6e56fd6fc21a55a",
            "subnet_id": "subnet-0f83929506c4162c2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2702d5e8d39a583",
            "route_table_id": "rtb-0b26b4b5153dd3e17",
            "subnet_id": "subnet-05cf6417c1f39938a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05109f3a963c29dc8",
            "route_table_id": "rtb-03db9074768a1245a",
            "subnet_id": "subnet-0faf50fbbbd4d27cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0335bd9c4f2c1e0b3",
            "route_table_id": "rtb-0a6e56fd6fc21a55a",
            "subnet_id": "subnet-0caa74737df7591e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df718ea9922496fe",
            "route_table_id": "rtb-017f3e3c7e1f9c9f9",
            "subnet_id": "subnet-066d18e6e1c4b430f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d98657edc994e3",
            "route_table_id": "rtb-017f3e3c7e1f9c9f9",
            "subnet_id": "subnet-032ca91c4e6cbc090"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0731deaa5d12b9fbc",
            "route_table_id": "rtb-017f3e3c7e1f9c9f9",
            "subnet_id": "subnet-0c64f1e8b11a0b20a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0a9b574402a166c09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b574402a166c09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-01f564ee700ce3af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f564ee700ce3af0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0f83929506c4162c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f83929506c4162c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-05cf6417c1f39938a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf6417c1f39938a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0faf50fbbbd4d27cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faf50fbbbd4d27cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0caa74737df7591e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caa74737df7591e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-066d18e6e1c4b430f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066d18e6e1c4b430f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-032ca91c4e6cbc090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032ca91c4e6cbc090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0c64f1e8b11a0b20a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c64f1e8b11a0b20a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-000c5149b041cd9d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:vpc/vpc-000c5149b041cd9d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e507f6d7974ccddc",
            "default_route_table_id": "rtb-0ec01951ad48e885c",
            "default_security_group_id": "sg-036fe961932bd56c0",
            "dhcp_options_id": "dopt-fe85b384",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000c5149b041cd9d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec01951ad48e885c",
            "owner_id": "061770395289",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}